force-app/main/default/objects/Monthly_Source_Request__c/Monthly_Source_Request__c.object-meta.xml
<CustomObject>
    <description>Each month new &quot;Monthly Data Method&quot; are created. These should be under a Monthly Source Data records. So we can roll up each Monthly payment to the Source level (and then to the Contract level)</description>
    <label>Monthly Source Request</label>
    <nameField>
        <label>Monthly Source Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Source Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>