force-app/main/default/objects/Monthly_Source_Request__c/fields/Count_Data_Request__c.field-meta.xml
<CustomField>
    <fullName>Count_Data_Request__c</fullName>
    <description>Count the total records of &quot;Monthly Data Request&quot; under the Monthly Source Request</description>
    <label>Count Data Request</label>
    <summaryForeignKey>Monthly_Data_Request__c.Monthly_Source_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>