force-app/main/default/objects/Monthly_Source_Request__c/fields/Count_Paid_Data_Request__c.field-meta.xml
<CustomField>
    <fullName>Count_Paid_Data_Request__c</fullName>
    <description>Count the &quot;Monthly Data Request&quot; under the Monthly Source Request where the &quot;Request Payment is populated.</description>
    <label>Count Paid Data Request</label>
    <summaryFilterItems>
        <field>Monthly_Data_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Calculated</value>
    </summaryFilterItems>
    <summaryForeignKey>Monthly_Data_Request__c.Monthly_Source_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>