force-app/main/default/objects/Monthly_Source_Request__c/fields/Monthly_Partner_Request__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Partner_Request__c</fullName>
    <description>All the Monthly Source Data should roll up to the &quot;Monthly Partner Data&quot;</description>
    <label>Monthly Partner Request</label>
    <referenceTo>Monthly_Partner_Request__c</referenceTo>
    <relationshipLabel>Monthly Source Requests</relationshipLabel>
    <relationshipName>Monthly_Source_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>