force-app/main/default/objects/Monthly_Source_Request__c/fields/Monthly_Source_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Source_Payment__c</fullName>
    <description>The total payment of the Source. Calculated from the all the related total payment of the related &quot;Monthly Data Request&quot; records.</description>
    <label>Monthly Source Payment</label>
    <summarizedField>Monthly_Data_Request__c.Request_Payment__c</summarizedField>
    <summaryForeignKey>Monthly_Data_Request__c.Monthly_Source_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>