force-app/main/default/objects/Monthly_Source_Request__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Source__c</referenceTo>
    <relationshipLabel>Monthly Source Requests</relationshipLabel>
    <relationshipName>Monthly_Source_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>