force-app/main/default/objects/Monthly_Source_Request__c/fields/Source_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Number__c</fullName>
    <formula>Source__r.Source_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>