force-app/main/default/objects/Monthly_Source_Request__c/fields/SUN_AVG_Data_Units__c.field-meta.xml
<CustomField>
    <fullName>SUN_AVG_Data_Units__c</fullName>
    <label>SUM AVG Data Units</label>
    <summarizedField>Monthly_Data_Request__c.AVG_Data_Units__c</summarizedField>
    <summaryForeignKey>Monthly_Data_Request__c.Monthly_Source_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>