force-app/main/default/objects/Monthly_Source_Request__c/listViews/Calculated_MSR.listView-meta.xml
<ListView>
    <fullName>Calculated_MSR</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Calculated</value>
    </filters>
    <label>Calculated MSR</label>
</ListView>