force-app/main/default/objects/Monthly_Source_Request__c/listViews/Calculated_MSR_LAST_MONTH.listView-meta.xml
<ListView>
    <fullName>Calculated_MSR_LAST_MONTH</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Calculated</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Calculated MSR LAST MONTH</label>
</ListView>