force-app/main/default/objects/Monthly_Source_Request__c/listViews/Open_MSR.listView-meta.xml
<ListView>
    <fullName>Open_MSR</fullName>
    <columns>NAME</columns>
    <columns>Source_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open MSR</label>
</ListView>